Improve implementation for EndPoint